# envoy-ext-authz-example

./: BUILD.bazel  README.md  Vagrantfile  WORKSPACE
cmd/: BUILD.bazel
k8s/charts/ext-authz/: Chart.yaml  values.yaml
k8s/charts/ext-authz/templates/: authz-deployment.yaml  authz-service.yaml
