load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["grpc_server.go"],
    importpath = "stash.sophos.net/sase/swg/authz",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_envoyproxy_go_control_plane//envoy/service/auth/v3:go_default_library",
        "@go_googleapis//google/rpc:status_go_proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//health:go_default_library",
        "@org_golang_google_grpc//health/grpc_health_v1:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)

go_binary(
    name = "authz",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
